<resources>
    <string name="app_name">SevenWindsTestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">e-mail</string>
    <string name="example_email">example@example.ru</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="login_toolbar_title">Вход</string>
    <string name="nearest_coffee_shops">Ближайшие кофейни</string>
    <string name="menu">Меню</string>
    <string name="you_order">Ваш заказ</string>
    <string name="check">Оплатить</string>
    <string name="map">Карта</string>
    <string name="register_toolbar_title">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="error_sign_in">Поле заполнено не верно</string>
    <string name="go_to_reg"><u>Еще не зарегистрированы?</u></string>
    <string name="on_map">На карте</string>
    <string name="to_buy">Перейти к оплате</string>
    <string name="request_location_perm_title">Данные о вашей локации</string>
    <string name="request_location_perm_body">Мы используем ваши данные только для отображения на карте</string>
    <string name="request_perm_negative">Нет</string>
    <string name="request_perm_positive">Да</string>
    <string name="check_string">Время ожидания заказа 15 минут!\nСпасибо что выбрали нас!</string>
</resources>