<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.order.OrderFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleCentered="true"
        app:title="@string/you_order"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_order"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/order_view_holder"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/normal_300"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        />

    <TextView
        android:id="@+id/order_check_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_string"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        />

</RelativeLayout>